Add updated Class and updated Code
Have gone back and attempted to update this program based on new thinsg I have learnt.

Such as classes, pointers and a better understanding of standard library.

--- a/bagelsGame/bagelsGame.vcxproj
+++ b/bagelsGame/bagelsGame.vcxproj
@@ -128,6 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bagelsGame.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Generator.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Generator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
